TP_Kube_02/Front/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: front.theo-gimond.epf.takima.school
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
  tls:
  - hosts:
    - front.theo-gimond.epf.takima.school
    secretName: app-wildcard
